feat: Implement event-based processing with file output

--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 project_id = novis-claims
 
 [document_ai]
-location = us-central1
+location = eu
 processor_id = af8c05a6c18f6ba3
 mime_type = application/pdf
 
