--- a/config.ini
+++ b/config.ini
@@ -10,10 +10,9 @@ mime_type = application/pdf
 # ID kompletnej de-identifikačnej šablóny
 template_id = projects/novis-claims/locations/global/deidentifyTemplates/kompletna-anonymizacia
 
-[analysis]
-location = global
+[gemini]
+# !!!DOPLŇTE VÁŠ API KĽÚČ ZÍSKANÝ Z GOOGLE AI STUDIO!!!
+api_key = AIzaSyBzCI9zzUWlcaZ-cZjqiFaoWpXvv2lRLms
 # Tu je možné jednoducho meniť modely, napr. gemini-1.5-flash, gemini-1.5-pro, atď.
-model_name = gemini-2.5-flash-lite
-prompt = Zhrň kľúčové body z nasledujúcich poistných dokumentov.
-    Zameraj sa na typ poistenia, poistné sumy, dátumy platnosti a mená zúčastnených strán.
-    Vypíš výsledok v prehľadnej štruktúre.
+model = gemini-1.5-flash-latest
+analysis_prompt = Zhrň kľúčové body z nasledujúcich poistných dokumentov. Zameraj sa na typ poistenia, poistné sumy, dátumy platnosti a mená zúčastnených strán. Vypíš výsledok v prehľadnej štruktúre.
