feat: Complete Claims AI application v1.0.0
- Added Docker and Docker Compose support
- Created comprehensive deployment documentation
- Added production deployment checklist
- Updated README with deployment instructions
- Added CHANGELOG.md for version tracking
- Fixed Google Cloud SDK configuration issues
- Added environment variables template
- Optimized .gitignore for production
- All API endpoints tested and working
- Ready for external company deployment

--- a/config.ini
+++ b/config.ini
@@ -1,18 +1,24 @@
 [gcp]
-project_id = novis-claims
+project_id = claims-ai-prototype-1
 
 [document_ai]
 location = eu
-processor_id = af8c05a6c18f6ba3
+processor_id = 1e3f139679670c26
 mime_type = application/pdf
 
 [dlp]
 # ID kompletnej de-identifikačnej šablóny
-template_id = projects/novis-claims/locations/global/deidentifyTemplates/kompletna-anonymizacia
+location = europe-west3
+template_id = projects/claims-ai-prototype-1/locations/europe-west3/deidentifyTemplates/de-identify-sensitive-data
+# Inspect šablóna na detekciu citlivých údajov
+inspect_template_id = projects/claims-ai-prototype-1/locations/europe-west3/inspectTemplates/find-sensitive-data
 
 [gemini]
 # !!!DOPLŇTE VÁŠ API KĽÚČ ZÍSKANÝ Z GOOGLE AI STUDIO!!!
-api_key = AIzaSyBzCI9zzUWlcaZ-cZjqiFaoWpXvv2lRLms
+api_key = AIzaSyDnjUcJ7r_qRhrwWewSZ0KJCUKfvIywSw0
 # Tu je možné jednoducho meniť modely, napr. gemini-1.5-flash, gemini-1.5-pro, atď.
 model = gemini-1.5-flash-latest
 analysis_prompt = Zhrň kľúčové body z nasledujúcich poistných dokumentov. Zameraj sa na typ poistenia, poistné sumy, dátumy platnosti a mená zúčastnených strán. Vypíš výsledok v prehľadnej štruktúre.
+
+[database]
+url = sqlite:///claims_ai.db
