--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,92 @@
-# Ignorovať výstupné priečinky
-/anonymized_output/
-/ocr_output/
-/reports/
-
-# Ignorovať vstupné dáta
-/vstup_vseobecne/
-*.pdf
-
-# Ignorovať systémové a cache súbory
+# Python
 __pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual environments
+venv/
+env/
+ENV/
+env.bak/
+venv.bak/
+
+# IDE
 .vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Application specific
+*.db
+*.sqlite
+*.sqlite3
+claims_ai.db
+anonymized_output/
+general_output/
+raw_ocr_output/
+analysis_output/
+poistne_udalosti/
+
+# Google Cloud
+*.json
+!config.ini
+service-account-key.json
+claims-ai-prototype-1-*.json
+
+# Environment variables
+.env
+.env.local
+.env.production
+
+# Logs
 *.log
+logs/
+
+# Docker
+.dockerignore
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
+*.backup
+
+# Security
+*.pem
+*.key
+*.crt
+*.p12
+*.pfx
+
+# Database
+*.sql
+*.dump
+backup/
