--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,11 @@ google-generativeai
 
 # Knižnica pre prácu s konfiguračnými súbormi
 configparser
+
+# Databáza
+SQLAlchemy>=2.0
+PyMySQL>=1.1
+
+# API server
+fastapi
+uvicorn
