security: Remove API key from config.ini and use environment variables

--- a/config.ini
+++ b/config.ini
@@ -15,8 +15,8 @@ inspect_template_id = projects/claims-ai-prototype-1/locations/europe-west3/insp
 
 [gemini]
 # !!!DOPLŇTE VÁŠ API KĽÚČ ZÍSKANÝ Z GOOGLE AI STUDIO!!!
-api_key = AIzaSyDnjUcJ7r_qRhrwWewSZ0KJCUKfvIywSw0
-# Tu je možné jednoducho meniť modely, napr. gemini-1.5-flash, gemini-1.5-pro, atď.
+# api_key = YOUR_API_KEY_HERE
+# Alebo nastavte environment variable: GEMINI_API_KEY
 model = gemini-1.5-flash-latest
 analysis_prompt = Zhrň kľúčové body z nasledujúcich poistných dokumentov. Zameraj sa na typ poistenia, poistné sumy, dátumy platnosti a mená zúčastnených strán. Vypíš výsledok v prehľadnej štruktúre.
 
