--- a/env.example
+++ b/env.example
@@ -2,6 +2,9 @@
 GOOGLE_APPLICATION_CREDENTIALS=service-account-key.json
 GOOGLE_CLOUD_PROJECT=claims-ai-prototype-1
 
+# Gemini AI
+GEMINI_API_KEY=YOUR_GEMINI_API_KEY_HERE
+
 # Database
 DATABASE_URL=mysql+pymysql://claims_user:claims_password@localhost:3306/claims_ai
 # Pre SQLite: DATABASE_URL=sqlite:///claims_ai.db
@@ -26,3 +29,5 @@ LOG_FILE=claims_ai.log
 DOCUMENT_AI_LOCATION=eu
 DLP_LOCATION=europe-west3
 GEMINI_MODEL=gemini-1.5-flash-latest
+
+# IMPORTANT: Replace YOUR_GEMINI_API_KEY_HERE with your actual Gemini API key
