security: Remove API key from env.example

--- a/env.example
+++ b/env.example
@@ -31,3 +31,4 @@ DLP_LOCATION=europe-west3
 GEMINI_MODEL=gemini-1.5-flash-latest
 
 # IMPORTANT: Replace YOUR_GEMINI_API_KEY_HERE with your actual Gemini API key
+# NIKDY NEUPLOADOVAŤ TENTO SÚBOR NA GITHUB!
