feat(config): unify to .env.local; Vertex AI aliases; prompts CRUD+UI; docs updated

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ streamlit
 google-cloud-documentai
 google-cloud-dlp
 google-generativeai
+google-cloud-aiplatform
+python-dotenv
 
 # Knižnica pre prácu s konfiguračnými súbormi
 configparser
