--- a/env.example
+++ b/env.example
@@ -1,34 +1,35 @@
 # Google Cloud Platform
 GOOGLE_APPLICATION_CREDENTIALS=service-account-key.json
-GOOGLE_CLOUD_PROJECT=claims-ai-prototype-1
+GOOGLE_CLOUD_PROJECT=your-gcp-project-id
 
-# Gemini AI
-GEMINI_API_KEY=YOUR_GEMINI_API_KEY_HERE
+# Vertex AI (EU rezidencia)
+USE_VERTEX_AI=1
+VERTEX_AI_LOCATION=europe-west1
 
-# Database
-DATABASE_URL=mysql+pymysql://claims_user:claims_password@localhost:3306/claims_ai
-# Pre SQLite: DATABASE_URL=sqlite:///claims_ai.db
+# Gemini model (alias odporúčaný v dokumentácii)
+# gemini-2.0-flash (stabilný alias)
+# Alternatívy: gemini-1.5-pro, gemini-1.5-flash
+GEMINI_MODEL=gemini-2.0-flash
+
+# Predvolený prompt pre analýzu
+ANALYSIS_PROMPT=Zhrň kľúčové body z nasledujúcich poistných dokumentov. Zameraj sa na typ poistenia, poistné sumy, dátumy platnosti a mená zúčastnených strán. Vypíš výsledok v prehľadnej štruktúre.
+
+# Databáza
+# Pre MySQL: mysql+pymysql://user:password@localhost:3306/claims_ai
+# Pre SQLite:
+DATABASE_URL=sqlite:///claims_ai.db
 
 # Streamlit
-STREAMLIT_SERVER_PORT=8501
+STREAMLIT_SERVER_PORT=8502
 STREAMLIT_SERVER_ADDRESS=0.0.0.0
 
 # FastAPI
 API_HOST=0.0.0.0
 API_PORT=8000
 
-# Security
-SECRET_KEY=your-secret-key-here
-ALLOWED_HOSTS=localhost,127.0.0.1
-
-# Logging
-LOG_LEVEL=INFO
-LOG_FILE=claims_ai.log
-
 # Google Cloud Services
 DOCUMENT_AI_LOCATION=eu
 DLP_LOCATION=europe-west3
-GEMINI_MODEL=gemini-1.5-flash-latest
 
-# IMPORTANT: Replace YOUR_GEMINI_API_KEY_HERE with your actual Gemini API key
-# NIKDY NEUPLOADOVAŤ TENTO SÚBOR NA GITHUB!
+# Poznámky:
+# - Tento súbor je len príklad. Nenahrávať žiadne skutočné kľúče ani citlivé údaje.
