chore(config): move main.py to env-only; update env.example; docs aligned

--- a/env.example
+++ b/env.example
@@ -7,16 +7,22 @@ USE_VERTEX_AI=1
 VERTEX_AI_LOCATION=europe-west1
 
 # Gemini model (alias odporúčaný v dokumentácii)
-# gemini-2.0-flash (stabilný alias)
-# Alternatívy: gemini-1.5-pro, gemini-1.5-flash
 GEMINI_MODEL=gemini-2.0-flash
 
 # Predvolený prompt pre analýzu
 ANALYSIS_PROMPT=Zhrň kľúčové body z nasledujúcich poistných dokumentov. Zameraj sa na typ poistenia, poistné sumy, dátumy platnosti a mená zúčastnených strán. Vypíš výsledok v prehľadnej štruktúre.
 
+# Document AI
+DOCUMENT_AI_LOCATION=eu
+DOCUMENT_AI_PROCESSOR_ID=your-processor-id
+DOCUMENT_AI_MIME_TYPE=application/pdf
+
+# Cloud DLP (Sensitive Data Protection)
+DLP_LOCATION=europe-west3
+DLP_DEIDENTIFY_TEMPLATE_ID=projects/your-gcp-project-id/locations/europe-west3/deidentifyTemplates/your-template-id
+DLP_INSPECT_TEMPLATE_ID=projects/your-gcp-project-id/locations/europe-west3/inspectTemplates/your-inspect-template-id
+
 # Databáza
-# Pre MySQL: mysql+pymysql://user:password@localhost:3306/claims_ai
-# Pre SQLite:
 DATABASE_URL=sqlite:///claims_ai.db
 
 # Streamlit
@@ -26,10 +32,6 @@ STREAMLIT_SERVER_ADDRESS=0.0.0.0
 # FastAPI
 API_HOST=0.0.0.0
 API_PORT=8000
-
-# Google Cloud Services
-DOCUMENT_AI_LOCATION=eu
-DLP_LOCATION=europe-west3
 
 # Poznámky:
 # - Tento súbor je len príklad. Nenahrávať žiadne skutočné kľúče ani citlivé údaje.
