--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
+.venv/
+service-account-key.json
+.env.local
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+ENV/
+build/
+dist/
+.pytest_cache/
+.DS_Store
+.idea/
+.vscode/
 # Python
 __pycache__/
 *.py[cod]
